constraints/all/allowed-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedObjects
metadata:
  name: k8s-allowed-objects
  namespace: gator-local
spec:
  match:
    excludedNamespaces: ["gator-local"]
  parameters:
    allowedObjects:
    - ConfigMap
    - Deployment
    - Service
