constraints/all/required-annotations.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: all-resource-required-annotations
  namespace: gator-local
spec:
  match:
    excludedNamespaces: ["gator-local"]
  parameters:
    annotations: 
    - key: configsync.gke.io/cluster-name-selector
