constraints/all/required-namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNamespace
metadata:
  name: require-production-namespace
  namespace: gator-local
  annotations:
    description: "All resources must be deployed in the '__NAMESPACE__' namespace."
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["*"]
    excludedNamespaces:
      - "gator-local"
  parameters:
    namespace: "__NAMESPACE__"
